# looky

./: .gitignore  README.md  pyproject.toml
notebooks/: example.ipynb
scripts/: inference.py  inference.sh  prepare_dataset.py  prepare_dataset.sh  train_garment.py  train_garment.sh  train_vton.py  train_vton.sh
src/looky/: __init__.py  dwpose.py  frequency_loss.py
src/looky/models/: embeddings.py  transformer_garment.py  transformer_vton.py
src/looky/pipelines/: pipeline_agnostic_mask_generation.py  pipeline_output.py  pipeline_virtual_try_on.py
